welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: not a legal formal parameter
	(a <= 20 && a => 10) || (b <= 20 && b => 10)
                 ^in1020:2: error: not a legal formal parameter
	(a <= 20 && a => 10) || (b <= 20 && b => 10)
                                         ^